exit teams
