# weeks-backend/start/routes.ts
@@ -33,6 +33,7 @@ Route.resource('teams', 'TeamsController')
     '*': ['auth:api']
   })
 Route.post('/teams/:id/removeUser', 'TeamsController.removeUser').middleware('auth:api')
+Route.post('/teams/:id/exit', 'TeamsController.exit').middleware('auth:api')
 Route.post('/teams/:id/updatePreference', 'TeamsController.updatePreference').middleware('auth:api')
 
 Route.post('/roles', 'RolesController.store').middleware('auth:api')
